<resources>
    <string name="app_name">MockProject</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="edit_profile">edit profile</string>
    <string name="default_gmail">khanh2000vt@gmail.com</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="credit_card">Credit Card</string>
    <string name="order">Order</string>
    <string name="support">Support</string>
    <string name="rank">Rank:</string>
    <string name="rank_default">Copper</string>
    <string name="tell">Tell:</string>
    <string name="tell_default">0983752000</string>
    <string name="address">Address:</string>
    <string name="address_default">HaNoi</string>
    <string name="total_spending">Total spending:</string>
    <string name="total_default">100.000.000</string>
    <string name="titleSearch">Muốn ăn gì nào bạn ơi?</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="todo">TODO</string>
    <string name="h_o_m_e">H O M E</string>
    <string name="button_home_to_cart_fragment">Button Home To Cart Fragment</string>
    <string name="button_home_to_profile_fragment">Button Home to Profile Fragment</string>
    <string name="banner">Banner</string>
    <string name="vnd">VNĐ</string>
    <string name="_50000">50000</string>
    <string name="add"> + Add</string>
    <string name="c_m_nh_l_m">Cơm nhà làm</string>
    <string name="food_image">Food Image</string>
    <string name="register">Register</string>
    <string name="input_your_name">Input your name</string>
    <string name="boiled_egg_gray_grain_toast_parmesan_cheese_sauce">Một món ăn hội tụ đầy đủ tất cả tinh hoa của đất trời, món ăn không thể thiếu đối với những người lười nấu ăn và thời gian chuẩn bị không tốn quá nhiều thời gian
    </string>
    <string name="name">Name:</string>
    <string name="gmail">Gmail:</string>
    <string name="phone_number">Phone Number</string>
    <string name="link_to_your_facebook">Link to your Facebook</string>
    <string name="change">change</string>
    <string name="save">save</string>
    <string name="notification">Notification</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_account">Request to delete account</string>
    <string name="rice">RICE</string>
    <string name="boiled_egg_toast">Boiled egg toast</string>
    <string name="noodle">NOODLE</string>
    <string name="add_to_cart"> + ADD TO CART</string>
    <string name="d_e_t_a_i_l">D E T A I L</string>
    <string name="button">Button</string>
    <string name="c_a_r_t">C A R T</string>
    <string name="title_food">Title Food</string>
    <string name="_55555_vnd">55555 VND</string>
    <string name="sub">-</string>
    <string name="count">1</string>
    <string name="_add">+</string>
    <string name="_999999999_vnd">999999999 VND</string>
    <string name="t_h_ng">Đặt hàng</string>
    <string name="image2">Image</string>
    <string name="c_a_t_e_g_o_r_y">C A T E G O R Y</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="location">Lets determine your location</string>
    <string name="x_c_nh_n">Xác nhận</string>
</resources>