<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    android:paddingBottom="@dimen/tendp"
    android:paddingTop="@dimen/tendp"
    android:layout_margin="@dimen/twelvedp">

    <ImageView
        android:id="@+id/resultImage"
        android:layout_width="@dimen/margin80dp"
        android:layout_height="@dimen/margin80dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:src="@drawable/cat_pizza"
        android:contentDescription="Image" />

    <TextView
        android:id="@+id/resultTitle"
        android:textSize="@dimen/margin20dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/nearRed"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/title_food"
        app:layout_constraintStart_toEndOf="@+id/resultImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resultFee"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/fifteendp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/_55555_vnd"
        app:layout_constraintStart_toEndOf="@+id/resultImage"
        app:layout_constraintTop_toBottomOf="@+id/resultTitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/resultImage"
        app:layout_constraintTop_toBottomOf="@id/resultFee">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubInCart"
            android:background="@drawable/roundstyle5"
            android:layout_width="@dimen/margin40dp"
            android:layout_height="@dimen/margin40dp"
            android:text="@string/sub" />

        <TextView
            android:id="@+id/resultCount"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/margin20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tendp"
            android:layout_marginRight="@dimen/tendp"
            android:text="@string/count" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddInCart"
            android:background="@drawable/roundstyle5"
            android:layout_width="@dimen/margin40dp"
            android:layout_height="@dimen/margin40dp"
            android:text="@string/_add" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>