<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    android:paddingBottom="@dimen/tendp"
    android:paddingTop="@dimen/tendp"
    android:layout_margin="@dimen/twelvedp">

    <ImageView
        android:id="@+id/categoryResultImage"
        android:layout_width="@dimen/margin80dp"
        android:layout_height="@dimen/margin80dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:src="@drawable/cat_pizza"
        android:contentDescription="@string/image2" />

    <TextView
        android:id="@+id/categoryResultTitle"
        android:textSize="@dimen/margin20dp"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/nearRed"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/title_food"
        app:layout_constraintStart_toEndOf="@+id/categoryResultImage"
        tools:ignore="MissingConstraints,SpUsage" />

    <TextView
        android:id="@+id/categoryResultFee"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/fifteendp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/_55555_vnd"
        app:layout_constraintStart_toEndOf="@+id/categoryResultImage"
        app:layout_constraintTop_toBottomOf="@+id/categoryResultTitle"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/categoryResultDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/tendp"
        android:text="@string/add_to_cart"
        app:layout_constraintStart_toEndOf="@id/categoryResultImage"
        app:layout_constraintTop_toBottomOf="@id/categoryResultFee"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>