<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="gts.trainningcourse.mockproject.view.fragment.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twelvedp"
        android:padding="@dimen/twelvedp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnDetailToProfileFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:src="@drawable/ic_baseline_supervised_user_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_e_t_a_i_l"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/fifteendp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDetailToHomeFragment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDetailToProfileFragment"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <ImageButton
            android:id="@+id/btnDetailToHomeFragment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorBackground"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/roundstyle3"
        android:layout_marginTop="@dimen/margin50dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tvDetailFoodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tendp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundstyle4"
            android:paddingLeft="@dimen/margin20dp"
            android:paddingRight="@dimen/margin20dp"
            android:text="@string/noodle"
            android:textColor="@color/white"
            android:textSize="@dimen/margin24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,SpUsage" />

        <ImageView
            android:id="@+id/detailBanner"
            android:layout_width="368dp"
            android:layout_height="200dp"
            android:contentDescription="@string/banner"
            android:scaleType="centerInside"
            android:src="@drawable/cat_noodle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailFoodType"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailBanner">

            <TextView
                android:id="@+id/tvDetailFoodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boiled_egg_toast"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/margin30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvDetailFoodDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tendp"
                android:text="@string/boiled_egg_gray_grain_toast_parmesan_cheese_sauce"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/vnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailFoodTitle" />

            <TextView
                android:id="@+id/vnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/vnd"
                android:textColor="@color/nearRed"
                android:textSize="@dimen/margin20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvDetailFoodFee"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailFoodDescription"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvDetailFoodFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin5dp"
                android:text="@string/_50000"
                android:textSize="@dimen/margin20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailFoodDescription"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddFoodToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="@dimen/margin20dp"
                android:paddingRight="@dimen/margin20dp"
                android:background="@drawable/roundstyle2"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailFoodFee" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>