<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="gts.trainningcourse.mockproject.view.fragment.profile.EditProfileFragment">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/background_profile_top"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="36dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/view_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin30dp"
        app:cardCornerRadius="@dimen/margin50dp"
        android:elevation="@dimen/margin20dp">

        <ImageView
            android:contentDescription="@null"
            android:id="@+id/image_avatar"
            android:layout_width="@dimen/margin100dp"
            android:layout_height="@dimen/margin100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_test" />
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/frame_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_option_profile"
        android:layout_margin="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/view_avatar">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:autofillHints="" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_gmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_option_profile"
        android:layout_margin="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/frame_name">

        <EditText
            android:id="@+id/edit_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gmail"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_tell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_option_edit_profile"
        android:layout_margin="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/frame_gmail">

        <EditText
            android:id="@+id/edit_tell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_option_edit_profile"
        android:layout_margin="@dimen/margin20dp"
        app:layout_constraintTop_toBottomOf="@id/frame_tell">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:autofillHints="Password"
            tools:ignore="TextFields" />
    </FrameLayout>


    <Button
        android:id="@+id/btn_save_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:text="@string/x_c_nh_n"
        app:layout_constraintTop_toBottomOf="@id/frame_facebook"
        tools:ignore="TextViewEdits" />
</androidx.constraintlayout.widget.ConstraintLayout>